Fixed of part overflow hidden

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -571,10 +571,6 @@ h2.dark::before {
   }
 } */
 
-body {
-  margin: 0; height: 100%; overflow: hidden;
-}
-
 /*  Brand */
 #banner {
   position: relative;
